@startuml
class SemicolonBuilding {
    - classrooms: Array<ClassRoom>
}

class ClassRoom {
    - roomNumber: int
    - roomCapacity: int
    - students: List<Student>
    - facilitators: List<Facilitator>
    + addStudent(student: Student)
    + removeStudent(student: Student)
    + addFacilitator(facilitator: Facilitator)
    + removeFacilitator(facilitator: Facilitator)
}

class Student {
    - name: String
    - email: String
    - phoneNumber: String
    - cohortNumber: String
}

class Facilitator {
    - name: String
    - languageTaking: String
}

SemicolonBuilding <-- ClassRoom: has
ClassRoom <-- Student: has
ClassRoom <-- Facilitator: has
@enduml